# LightRay

./: CMakeLists.txt  README.md  packages.manifest  repositories.manifest
include/lightray/: attribute.hpp  coredef.hpp  fixed_string.hpp  gen_meta.hpp  reflection.hpp  traits.hpp
include/lightray/preprocessor/: arithmetic.hpp  common.hpp  seq.hpp  variadic.hpp
include/lightray/preprocessor/arithmetic/: increment.hpp
include/lightray/preprocessor/common/: call.hpp  concat.hpp  defer.hpp  empty.hpp  eval.hpp  join.hpp  repeat.hpp  stringize.hpp  symbols.hpp
include/lightray/preprocessor/seq/: first.hpp  for_each.hpp  rest.hpp  size.hpp
include/lightray/preprocessor/variadic/: for_each.hpp  head.hpp  rest.hpp  size.hpp
include/lightray/reflection/: member_tuple.hpp  type_info.hpp
include/lightray/traits/: common.hpp  sequence.hpp  type.hpp
include/lightray/traits/sequence/: fluent.hpp  type.hpp  value.hpp
liblightray-debug/: README.md  manifest
liblightray-debug/include/lightray/debug/: assertion.hpp  buildfile  export.hpp  print.hpp  test_case.hpp  version.hpp.in
liblightray-debug/src/lightray/debug/: assertion.cpp  buildfile  dummy.test.cpp
liblightray-debug/tests/basics/: buildfile
liblightray-metaprogramming/: README.md  manifest
liblightray-metaprogramming/tests/basics/: buildfile  driver.cpp
liblightray-preprocessor/: .gitignore  README.md  manifest
liblightray-preprocessor/tests/basics/: buildfile  driver.cpp
liblightray-reflection/: README.md  manifest
liblightray-reflection/tests/basics/: buildfile  driver.cpp
src/: main.cpp
(+66 files in other folders)
